--- a/src/app/square/square.component.html
+++ b/src/app/square/square.component.html
@@ -1,1 +1,3 @@
-<p>square works!</p>
+<button class="null" *ngIf="!value">{{ value }}</button>
+<button class="X" *ngIf="value == 'X'">{{ value }}</button>
+<button class="O" *ngIf="value == 'O'">{{ value }}</button>
